--- a/apps/havana500-admin/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-admin/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container">
     <button mat-icon-button (click)="toggleSNav()"><mat-icon>menu</mat-icon></button>
     <div class="toolbar-separator"></div>
-    <h1 class="example-app-name">Responsive App</h1>
+    <h1>Havana 500 Admin</h1>
 </div>
