--- a/apps/havana500-admin/src/app/core/scss/core.scss
+++ b/apps/havana500-admin/src/app/core/scss/core.scss
@@ -4,7 +4,7 @@
 
 // @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-// Theming
+// // Theming
 @include mat-core();
 
 // Include theme styles for core and each component used in your app.
@@ -21,7 +21,7 @@
 @import "partials/material";
 @import "partials/angular-material-fix";
 @import "partials/typography";
-// @import "partials/page-layouts";
+@import "partials/page-layouts";
 @import "partials/cards";
 @import "partials/navigation";
 @import "partials/forms";
