--- a/apps/havana500-admin/src/app/core/scss/partials/_scrollbars.scss
+++ b/apps/havana500-admin/src/app/core/scss/partials/_scrollbars.scss
@@ -11,8 +11,8 @@ body:not(.is-mobile) {
     }
 
     ::-webkit-scrollbar-thumb {
-        border: 2px solid transparent;
-        box-shadow: inset 0 0 0 24px rgba(0, 0, 0, 0.37);
+        border: 3px solid transparent;
+        box-shadow: inset 0 0 0 24px #868E96;
         border-radius: 24px;
     }
 
