--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -5,13 +5,22 @@
     </mat-toolbar>
 
     <mat-sidenav-container style="height:100%">
+        <mat-sidenav class="sidenav nav mat-fuse-dark-700-bg" role="navigation" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+            [fixedInViewport]="true" fixedTopGap="56">
 
-        <!-- <ant-sidenav #sideNav></ant-sidenav> -->
-
-        <mat-sidenav class="sidenav" role="navigation" #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
-                <a class="navigation-item" mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+
+                <div class="navbar-header">
+                    <div class="logo">
+                        <img class="logo-icon" src="assets/images/logos/fuse.svg">
+                        <span class="logo-text">HAVANA 500</span>
+                    </div>
+                </div>   
+
+                <ant-nav-vertical-item [item]="nav" *ngFor="let nav of fillerNav"></ant-nav-vertical-item>
+                
             </mat-nav-list>
+
         </mat-sidenav>
 
         <mat-sidenav-content class="main" role="main">
