--- a/apps/havana500-admin/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.scss
@@ -32,15 +32,44 @@ h1.example-app-name {
   flex: 1 0 auto;
 }
 
-.main{
+.main {
   padding: 1rem 3rem;
 }
 
-.sidenav{
-  min-width: 20%;
+.sidenav {
+  min-width: 19%;  
 }
 
-.mat-list-item-content{
+.mat-list-item-content {
   justify-content: center;
 }
 
+.navbar-header {
+        padding: 0 1rem 0 1.5rem;
+        margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        height: 64px;
+        min-height: 64px;
+        justify-content: space-between;
+        transition: padding 200ms ease;
+        background-color: rgba(255, 255, 255, .05);
+        @include mat-elevation(1);
+
+        .logo {
+            display: flex;
+            align-items: center;
+
+            .logo-icon {
+                width: 38px;
+                height: 38px;
+            }
+
+            .logo-text {
+                margin-left: 8px;
+                font-size: 20px;
+                font-weight: 300;
+                letter-spacing: 0.4px;
+            }
+        }
+    }
