--- a/apps/havana500-admin/src/app/features/account/smart/login/login.component.scss
+++ b/apps/havana500-admin/src/app/features/account/smart/login/login.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../core/scss/ant';
+@import '../../../../core/scss/core';
 :host {
   #login {
     width: 100%;
@@ -68,6 +68,7 @@
             width: 220px;
             margin: 16px auto;
             display: block;
+            padding: 1rem 0;
 
             @include media-breakpoint('xs') {
               width: 90%;
