--- a/apps/havana500-admin/src/app/features/account/smart/register/register.component.html
+++ b/apps/havana500-admin/src/app/features/account/smart/register/register.component.html
@@ -1,8 +1,8 @@
-<div id="register" fxLayout="column" fusePerfectScrollbar>
+<div id="register" fxLayout="column">
 
     <div id="register-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
-        <div id="register-form" *fuseIfOnDom [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
+        <div id="register-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
             <div class="logo">
                 <img src="assets/images/logos/fuse.svg">
@@ -53,8 +53,7 @@
                     <a href="#">terms and conditions</a>
                 </div>
 
-                <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
-                        [disabled]="registerForm.invalid">
+                <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT" [disabled]="registerForm.invalid">
                     CREATE AN ACCOUNT
                 </button>
 
