--- a/apps/havana500-admin/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.scss
@@ -1,5 +1,5 @@
 @import '../../core/scss/core';
-.example-container {
+.container {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -16,28 +16,24 @@
   // background-color: mat-color();
 }
 
-h1.example-app-name {
+h1.app-name {
   margin-left: 8px;
 }
 
-.example-sidenav-container {
+.sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   flex: 1;
 }
 
-.example-is-mobile .example-sidenav-container {
+.is-mobile .sidenav-container {
   /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
 
-.main {
-  padding: 1rem 3rem;
-}
-
 .sidenav {
-  min-width: 19%;  
+  min-width: 19%;
 }
 
 .mat-list-item-content {
@@ -45,31 +41,35 @@ h1.example-app-name {
 }
 
 .navbar-header {
-        padding: 0 1rem 0 1.5rem;
-        margin-bottom: 1rem;
-        display: flex;
-        align-items: center;
-        height: 64px;
-        min-height: 64px;
-        justify-content: space-between;
-        transition: padding 200ms ease;
-        background-color: rgba(255, 255, 255, .05);
-        @include mat-elevation(1);
+  padding: 0 1rem 0 1.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  height: 64px;
+  min-height: 64px;
+  justify-content: space-between;
+  transition: padding 200ms ease;
+  background-color: rgba(255, 255, 255, 0.05);
+  @include mat-elevation(1);
 
-        .logo {
-            display: flex;
-            align-items: center;
+  .logo {
+    display: flex;
+    align-items: center;
 
-            .logo-icon {
-                width: 38px;
-                height: 38px;
-            }
-
-            .logo-text {
-                margin-left: 8px;
-                font-size: 20px;
-                font-weight: 300;
-                letter-spacing: 0.4px;
-            }
-        }
+    .logo-icon {
+      width: 38px;
+      height: 38px;
     }
+
+    .logo-text {
+      margin-left: 8px;
+      font-size: 20px;
+      font-weight: 300;
+      letter-spacing: 0.4px;
+    }
+  }
+}
+
+.main-content {
+  margin-top: 56px;
+}
