Unprotect from unautheticated users (until openId on server)

--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -1,7 +1,8 @@
 <div class="container" [class.is-mobile]="mobileQuery.matches">
 
-    <mat-toolbar *ngIf="authService.hasValidAccessToken()" class="toolbar mat-elevation-z1">
-        <ant-toolbar (toggleSideNav)="snav.toggle()"></ant-toolbar>
+    <!-- <mat-toolbar  class="toolbar mat-elevation-z1" *ngIf="authService.hasValidAccessToken()"> -->
+    <mat-toolbar class="toolbar mat-elevation-z1">
+        <ant-toolbar fxFill (toggleSideNav)="snav.toggle()"></ant-toolbar>
     </mat-toolbar>
 
     <mat-sidenav-container style="height:100%">
