--- a/apps/havana500-admin/src/app/features/account/smart/login/login.component.html
+++ b/apps/havana500-admin/src/app/features/account/smart/login/login.component.html
@@ -29,14 +29,14 @@
           </mat-error>
         </mat-form-field>
 
-        <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-          <mat-checkbox class="remember-me" aria-label="Remember Me">
+        <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center">
+          <mat-checkbox class="remember-me" aria-label="Remember Me" formControlName="rememberMe">
             Remember Me
           </mat-checkbox>
 
-          <a class="forgot-password" [routerLink]="'/pages/auth/forgot-password'">
+          <!-- <a class="forgot-password" [routerLink]="'/pages/auth/forgot-password'">
             Forgot Password?
-          </a>
+          </a> -->
         </div>
 
         <button mat-raised-button tabindex="1" color="accent" class="submit-button" aria-label="LOG IN" [disabled]="loginForm?.invalid">
@@ -59,7 +59,7 @@
 
       <div class="register" fxLayout="column" fxLayoutAlign="center center">
         <span class="text">Don't have an account?</span>
-        <a class="link" [routerLink]="'/pages/auth/register'">Create an account</a>
+        <a class="link" [routerLink]="'../register'">Create an account</a>
       </div>
 
     </div>
