--- a/apps/havana500-admin/src/app/features/account/smart/register/register.component.html
+++ b/apps/havana500-admin/src/app/features/account/smart/register/register.component.html
@@ -1,4 +1,4 @@
-<div id="register" fxLayout="column">
+<div id="register" fxLayout="column" fxFill>
 
     <div id="register-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
@@ -10,11 +10,11 @@
 
             <div class="title">CREATE AN ACCOUNT</div>
 
-            <form name="registerForm" [formGroup]="registerForm" novalidate>
+            <form name="registerForm" [formGroup]="registerForm" novalidate (submit)="doRegister()">
 
                 <mat-form-field>
-                    <input matInput placeholder="Name" formControlName="name">
-                    <mat-error *ngIf="registerFormErrors.name.required">
+                    <input matInput placeholder="Name" formControlName="userName">
+                    <mat-error *ngIf="registerFormErrors.userName.required">
                         Name is required
                     </mat-error>
                 </mat-form-field>
@@ -37,21 +37,21 @@
                 </mat-form-field>
 
                 <mat-form-field>
-                    <input matInput type="password" placeholder="Password (Confirm)" formControlName="passwordConfirm">
-                    <mat-error *ngIf="registerFormErrors.passwordConfirm.required">
+                    <input matInput type="password" placeholder="Password (Confirm)" formControlName="confirmPassword">
+                    <mat-error *ngIf="registerFormErrors.confirmPassword.required">
                         Password confirmation is required
                     </mat-error>
-                    <mat-error *ngIf="registerFormErrors.passwordConfirm.passwordsNotMatch">
+                    <mat-error *ngIf="registerFormErrors.confirmPassword.passwordsNotMatch">
                         Passwords must match
                     </mat-error>
                 </mat-form-field>
 
-                <div class="terms" fxLayout="row" fxLayoutAlign="center center">
+                <!-- <div class="terms" fxLayout="row" fxLayoutAlign="center center">
                     <mat-checkbox name="terms" aria-label="I read and accept" required>
                         <span>I read and accept</span>
                     </mat-checkbox>
                     <a href="#">terms and conditions</a>
-                </div>
+                </div> -->
 
                 <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT" [disabled]="registerForm.invalid">
                     CREATE AN ACCOUNT
