Change toolbar style to mat-white

--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -1,8 +1,8 @@
 <div class="container" [class.is-mobile]="mobileQuery.matches">
 
     <!-- <mat-toolbar  class="toolbar mat-elevation-z1" *ngIf="authService.hasValidAccessToken()"> -->
-    <mat-toolbar class="toolbar mat-elevation-z1" *ngIf="authService.hasValidAccessToken()">
-        <ant-toolbar fxFill (toggleSideNav)="snav.toggle()"></ant-toolbar>
+    <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg" *ngIf="authService.hasValidAccessToken()">
+        <ant-toolbar fxFill (toggleSideNav)="snav.toggle()" (closeSideNav)="snav.close()"></ant-toolbar>
     </mat-toolbar>
 
     <mat-sidenav-container style="height:100%">
