--- a/apps/havana500-admin/src/app/features/dashboard/dashboard.component.html
+++ b/apps/havana500-admin/src/app/features/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<div id="dashboard-project" class="page-layout simple right-sidenav" fxLayout="row">
+<div id="dashboard-project" class="page-layout simple" fxLayout="row" fxFill>
 
 
     <!-- CENTER -->
-    <div class="center">
+    <div class="center" fxFill>
 
         <!-- HEADER -->
         <div class="header mat-accent-bg p-24 pb-0" fxLayout="column" fxLayoutAlign="space-between">
@@ -10,7 +10,8 @@
             <div fxLayout="row" fxLayoutAlign="space-between start">
 
                 <span class="mat-display-1 mb-0 welcome-message" [@animate]="{value:'*',params:{x:'50px'}}">Welcome back,
-                    John!</span>                
+                    John!
+                </span>
             </div>
 
             <div fxLayout="row">
@@ -37,13 +38,13 @@
 
                 <mat-tab label="Home">
 
-                    <div class="widget-group p-12" fxLayout="row" fxFlex="100" fxLayoutWrap *fuseIfOnDom [@animateStagger]="{value:'50'}">
+                    <div class="widget-group p-12" fxLayout="row wrap" fxFlex="100" [@animateStagger]="{value:'50'}">
 
                         <!-- WIDGET 1 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                                     <mat-form-field>
                                         <mat-select class="simplified font-size-16" [(ngModel)]="widgets.widget1.currentRange" aria-label="Change range">
@@ -52,7 +53,7 @@
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <button mat-icon-button fuseWidgetToggle aria-label="more">
+                                    <button mat-icon-button antWidgetToggle aria-label="more">
                                         <mat-icon>more_vert</mat-icon>
                                     </button>
                                 </div>
@@ -72,8 +73,8 @@
                             <!-- / Front -->
 
                             <!-- Back -->
-                            <div class="fuse-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
-                                <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="Flip widget">
+                            <div class="ant-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
+                                <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="Flip widget">
                                     <mat-icon class="s-16">close</mat-icon>
                                 </button>
 
@@ -83,18 +84,18 @@
                             </div>
                             <!-- / Back -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 1 -->
 
                         <!-- WIDGET 2 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                                     <div class="h3">{{widgets.widget2.title}}</div>
 
-                                    <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="more">
+                                    <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="more">
                                         <mat-icon>more_vert</mat-icon>
                                     </button>
                                 </div>
@@ -114,8 +115,8 @@
                             <!-- / Front -->
 
                             <!-- Back -->
-                            <div class="fuse-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
-                                <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="Flip widget">
+                            <div class="ant-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
+                                <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="Flip widget">
                                     <mat-icon class="s-16">close</mat-icon>
                                 </button>
 
@@ -125,18 +126,18 @@
                             </div>
                             <!-- / Back -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 2 -->
 
                         <!-- WIDGET 3 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                                     <div class="h3">{{widgets.widget3.title}}</div>
 
-                                    <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="more">
+                                    <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="more">
                                         <mat-icon>more_vert</mat-icon>
                                     </button>
                                 </div>
@@ -156,8 +157,8 @@
                             <!-- / Front -->
 
                             <!-- Back -->
-                            <div class="fuse-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
-                                <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="Flip widget">
+                            <div class="ant-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
+                                <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="Flip widget">
                                     <mat-icon class="s-16">close</mat-icon>
                                 </button>
 
@@ -167,18 +168,18 @@
                             </div>
                             <!-- / Back -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 3 -->
 
                         <!-- WIDGET 4 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
                                 <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                                     <div class="h3">{{widgets.widget4.title}}</div>
 
-                                    <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="more">
+                                    <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="more">
                                         <mat-icon>more_vert</mat-icon>
                                     </button>
                                 </div>
@@ -197,8 +198,8 @@
                             <!-- / Front -->
 
                             <!-- Back -->
-                            <div class="fuse-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
-                                <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button" aria-label="Flip widget">
+                            <div class="ant-widget-back p-16 pt-32 mat-white-bg mat-elevation-z2">
+                                <button mat-icon-button antWidgetToggle class="ant-widget-flip-button" aria-label="Flip widget">
                                     <mat-icon class="s-16">close</mat-icon>
                                 </button>
 
@@ -208,17 +209,16 @@
                             </div>
                             <!-- / Back -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 4 -->
 
-
                         <!-- WIDGET 5 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="row" fxFlex="100">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="row" fxFlex="100">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
 
-                                <div class="px-16 border-bottom" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutWrap>
+                                <div class="px-16 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center">
 
                                     <div fxFlex class="py-8 h3">{{widgets.widget5.title}}</div>
 
@@ -230,16 +230,16 @@
                                     </div>
                                 </div>
 
-                                <div fxLayout="row" fxLayoutAlign="start end" fxLayoutWrap>
+                                <div fxLayout="row wrap" fxLayoutAlign="start end">
                                     <div class="h-420 mb-16" fxLayout="row" fxFlex="100" fxFlex.gt-sm="50">
-                                        <ngx-charts-bar-vertical-stacked *fuseIfOnDom [scheme]="widget5.scheme" [results]="this.widgets.widget5.mainChart[this.widget5.currentRange]"
+                                        <ngx-charts-bar-vertical-stacked *antIfOnDom [scheme]="widget5.scheme" [results]="this.widgets.widget5.mainChart[this.widget5.currentRange]"
                                             [gradient]="widget5.gradient" [xAxis]="widget5.xAxis" [yAxis]="widget5.yAxis" [legend]="widget5.legend"
                                             [showXAxisLabel]="widget5.showXAxisLabel" [showYAxisLabel]="widget5.showYAxisLabel"
                                             [xAxisLabel]="widget5.xAxisLabel" [yAxisLabel]="widget5.yAxisLabel" (select)="widget5.onSelect($event)">
                                         </ngx-charts-bar-vertical-stacked>
                                     </div>
 
-                                    <div class="mb-16" fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="row" fxLayoutWrap>
+                                    <div class="mb-16" fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="row" fxLayout="row wrap">
 
                                         <div fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="center" *ngFor="let widget of widgets.widget5.supporting | keys">
 
@@ -251,7 +251,7 @@
                                             </div>
 
                                             <div class="h-64">
-                                                <ngx-charts-area-chart *fuseIfOnDom [results]="widget.value.chart[widget5.currentRange]" [scheme]="widget5.supporting.scheme"
+                                                <ngx-charts-area-chart *antIfOnDom [results]="widget.value.chart[widget5.currentRange]" [scheme]="widget5.supporting.scheme"
                                                     [gradient]="widget5.supporting.gradient" [xAxis]="widget5.supporting.xAxis"
                                                     [yAxis]="widget5.supporting.yAxis" [legend]="widget5.supporting.legend" [showXAxisLabel]="widget5.supporting.showXAxisLabel"
                                                     [showYAxisLabel]="widget5.supporting.showYAxisLabel" [xAxisLabel]="widget5.supporting.xAxisLabel"
@@ -264,20 +264,20 @@
                             </div>
                             <!-- / Front -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 5 -->
 
-
                         <!-- WIDGET 6 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
 
                                 <div class="px-16 border-bottom" fxLayout="row" fxLayoutAlign="space-between center">
                                     <div class="h3">{{widgets.widget6.title}}</div>
                                     <mat-form-field>
-                                        <mat-select class="simplified" [(ngModel)]="widget6.currentRange" aria-label="Change range">
+
+                                        <mat-select class="simplified" aria-label="Change range" [(ngModel)]="widget6.currentRange">
                                             <mat-option *ngFor="let range of widgets.widget6.ranges | keys" [value]="range.key">
                                                 {{range.value}}
                                             </mat-option>
@@ -286,13 +286,13 @@
                                 </div>
 
                                 <div class="h-400">
-                                    <ngx-charts-pie-chart *fuseIfOnDom [scheme]="widget6.scheme" [results]="widgets.widget6.mainChart[widget6.currentRange]"
-                                        [legend]="widget6.showLegend" [explodeSlices]="widget6.explodeSlices" [labels]="widget6.labels"
-                                        [doughnut]="widget6.doughnut" [gradient]="widget6.gradient" (select)="widget6.onSelect($event)">
+                                    <ngx-charts-pie-chart *antIfOnDom [scheme]="widget6.scheme" [results]="widgets.widget6.mainChart[widget6.currentRange]" [legend]="widget6.showLegend"
+                                        [explodeSlices]="widget6.explodeSlices" [labels]="widget6.labels" [doughnut]="widget6.doughnut"
+                                        [gradient]="widget6.gradient" (select)="widget6.onSelect($event)">
                                     </ngx-charts-pie-chart>
                                 </div>
 
-                                <div class="py-8 mh-16 border-top" fxLayout="row" fxLayoutAlign="start center" fxLayoutWrap>
+                                <div class="py-8 mh-16 border-top" fxLayout="row wrap" fxLayoutAlign="start center">
                                     <div class="py-8 border-right" fxLayout="column" fxLayoutAlign="center center" fxFlex="100" fxFlex.gt-sm="50">
                                         <span class="mat-display-1 mb-0">{{widgets.widget6.footerLeft.count[widget6.currentRange]}}</span>
                                         <span class="h4">{{widgets.widget6.footerLeft.title}}</span>
@@ -307,19 +307,20 @@
                             </div>
                             <!-- / Front -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 6 -->
 
                         <!-- WIDGET 7 -->
-                        <fuse-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50">
+                        <ant-widget [@animate]="{value:'*',params:{y:'100%'}}" class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50">
 
                             <!-- Front -->
-                            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                            <div class="ant-widget-front mat-white-bg mat-elevation-z2">
 
                                 <div class="px-16 border-bottom" fxLayout="row" fxLayoutAlign="space-between center">
                                     <div class="h3">{{widgets.widget7.title}}</div>
                                     <mat-form-field>
-                                        <mat-select class="simplified" [(ngModel)]="widget7.currentRange" aria-label="Change range">
+                                        <mat-select class="simplified" aria-label="Change range" [(ngModel)]="widget7.currentRange">
+
                                             <mat-option *ngFor="let range of widgets.widget7.ranges | keys" [value]="range.key">
                                                 {{range.value}}
                                             </mat-option>
@@ -344,14 +345,14 @@
                             </div>
                             <!-- / Front -->
 
-                        </fuse-widget>
+                        </ant-widget>
                         <!-- / WIDGET 7 -->
 
                     </div>
                     <!-- / WIDGET GROUP -->
 
 
-                </mat-tab>               
+                </mat-tab>
 
             </mat-tab-group>
 
