--- a/libs/shared/src/lib/components/widget/widget.component.scss
+++ b/libs/shared/src/lib/components/widget/widget.component.scss
@@ -1,4 +1,4 @@
-fuse-widget {
+ant-widget {
     display: block;
     position: relative;
     perspective: 3000px;
@@ -10,7 +10,7 @@ fuse-widget {
         transition: transform 1s;
     }
 
-    > .fuse-widget-front {
+    > .ant-widget-front {
         display: flex;
         flex-direction: column;
         flex: 1 1 auto;
@@ -25,7 +25,7 @@ fuse-widget {
         transform: rotateY(0deg);
         backface-visibility: hidden;
     }
-    > .fuse-widget-back {
+    > .ant-widget-back {
         display: block;
         position: absolute;
         top: 12px;
@@ -40,7 +40,7 @@ fuse-widget {
         transform: rotateY(180deg);
         backface-visibility: hidden;
 
-        [fuseWidgetToggle] {
+        [antWidgetToggle] {
             position: absolute;
             top: 0;
             right: 0;
@@ -49,13 +49,13 @@ fuse-widget {
 
     &.flipped {
 
-        > .fuse-widget-front {
+        > .ant-widget-front {
             visibility: hidden;
             opacity: 0;
             transform: rotateY(180deg);
         }
 
-        > .fuse-widget-back {
+        > .ant-widget-back {
             display: block;
             visibility: visible;
             opacity: 1;
