Substitute the fuse references for ant

--- a/apps/havana500-admin/src/app/core/scss/partials/_angular-material-fix.scss
+++ b/apps/havana500-admin/src/app/core/scss/partials/_angular-material-fix.scss
@@ -57,7 +57,7 @@
     }
 }
 
-// Fix: "Stepper icons are broken due to Fuse's icon helpers"
+// Fix: "Stepper icons are broken due to Ant's icon helpers"
 mat-horizontal-stepper,
 mat-vertical-stepper {
 
