--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -6,14 +6,14 @@
     </mat-toolbar>
 
     <mat-sidenav-container style="height:100%">
-        <mat-sidenav class="sidenav nav mat-fuse-dark-700-bg" role="navigation" #snav [mode]="over"
+        <mat-sidenav class="sidenav nav mat-ant-dark-700-bg" role="navigation" #snav [mode]="over"
             [fixedInViewport]="true" fixedTopGap="56">
 
             <mat-nav-list>
 
                 <div class="navbar-header">
                     <div class="logo">
-                        <img class="logo-icon" src="assets/images/logos/fuse.svg">
+                        <img class="logo-icon" src="assets/images/logos/ant.svg">
                         <span class="logo-text">HAVANA 500</span>
                     </div>
                 </div>
