--- a/apps/havana500-admin/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-admin/src/app/features/layout/main-menu/toolbar.component.html
@@ -18,12 +18,12 @@
 
         <!-- <div fxLayout="row" fxLayoutAlign="start center" *ngIf="horizontalNav">
             <div class="logo ml-16">
-                <img class="logo-icon" src="assets/images/logos/fuse.svg">
+                <img class="logo-icon" src="assets/images/logos/ant.svg">
             </div>
         </div> -->
 
         <!-- <div class="px-8 px-mat-16">
-            <fuse-shortcuts></fuse-shortcuts>
+            <ant-shortcuts></ant-shortcuts>
         </div> -->
 
     </div>
@@ -59,7 +59,7 @@
 
         <div class="toolbar-separator"></div>
 
-        <!-- <fuse-search-bar (onInput)="search($event)"></fuse-search-bar> -->
+        <!-- <ant-search-bar (onInput)="search($event)"></ant-search-bar> -->
 
         <!-- <div class="toolbar-separator"></div> -->
 
