Minor style fix

--- a/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
+++ b/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
@@ -76,6 +76,10 @@
       border-radius: 50%;
     }
   }
+
+  #search {
+    caret-color: white !important;
+  }
 }
 
 // .mat-form-field-underline {
