Add typo fixes!!

--- a/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.html
@@ -21,7 +21,7 @@
             <div formGroupName="article">
 
                 <div hidden>
-                    <input formControlName="Id" type="text" class="form-control">
+                    <input formControlName="id" type="text" class="form-control">
                 </div>
 
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
