--- a/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
+++ b/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
@@ -1,6 +1,8 @@
 @import '../../../core/scss/ant';
 
-:host {
+.articles-home-padded {
+  padding-bottom: 7rem;
+
   .header {
     .search-input-wrapper {
       max-width: 480px;
@@ -38,6 +40,12 @@
       min-width: 0;
       display: flex;
       align-items: center;
+      justify-content: center;
+    }
+
+    .mat-header-cell {
+      display: flex;
+      justify-content: center;
     }
 
     .mat-column-id {
