--- a/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.scss
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update-article.component.scss
@@ -1,12 +1,12 @@
 @import './../../../core/scss/ant';
 
-.contact-form-dialog {
+.article-form-dialog {
   @include media-breakpoint('xs') {
     width: 100%;
   }
 
   @include media-breakpoint-up('xs') {
-    width: 400px;
+    width: 500px;
   }
 
   .mat-dialog-container {
@@ -15,6 +15,17 @@
 
     .mat-toolbar {
       min-height: initial;
+
+      mat-icon {
+        color: white;
+      }
+
+      .article-title {
+        max-width: 100%;
+        text-align: center;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
 
     .toolbar-bottom {
