Extract table logic to a BaseTableContainerComponent

--- a/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
+++ b/apps/havana500-admin/src/app/features/article/smart/article-home.component.scss
@@ -43,6 +43,10 @@
       justify-content: center;
     }
 
+    .mat-cell:first-of-type {
+      padding-left: 12px;
+    }
+
     .mat-header-cell {
       display: flex;
       justify-content: center;
